@@ -1,3 +1,5 @@
+########### 2015-9-25################
+alter table pay_coupon_template add column limit_num int(11) default 1;
 ########### 2015-9-18 #################
 alter table shop_items_product add column sale_product bigint(20) NOT NULL DEFAULT 0;
 CREATE INDEX `shop_items_product_bdef1e5a` ON `shop_items_product` (`sale_product`);
